<resources>
    <string name="app_name">Quiz</string>
    <string name="lbl_pergunta">Pergunta</string>
    <string name="lbl_question">Question</string>
    <string name="lbl_verdadeiro">Verdadeiro</string>
    <string name="lbl_falso">Falso</string>
    <string name="toast_message_success">Acertou!</string>
    <string name="toast_message_error">Errou!</string>
    <string name="lbl_question_title">Pergunta - </string>
    <string name="lbl_resultado">Resultado</string>
    <string name="val_default_percentage">0%</string>
    <string name="lbl_try_again">Tentar novamente</string>
</resources>